--- a/notebooks/ExampleLNP-ModelTraining.ipynb
+++ b/notebooks/ExampleLNP-ModelTraining.ipynb
@@ -12,8 +12,9 @@
     "import numpy as np\n",
     "import importlib\n",
     "\n",
-    "p = !pwd\n",
-    "p = os.path.dirname(p[0])\n",
+    "%cd ..\n",
+    "p = os.getcwd()\n",
+    "print(\"path:\" + p)\n",
     "if p not in sys.path:\n",
     "    sys.path.append(p)\n",
     "    \n",
@@ -185,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
